core/stdlib/tests/ui/store_invalid_multi_field_variant.rs
use stdlib::Store;

#[derive(Store)]
enum Invalid {
    Multi(u64, u64),
}
